@@ -1,3 +1,9 @@
+2007-11-26  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
+
+	* src/av-cp/playlist-treeview.c:
+
+	Minor indentation changes.
+
 2007-11-19  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
 
 	* AUTHORS:
